src/app/temporary/infoCards/InfoCards.module.css
.infoCardsWrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 25px;
}

.card {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card p {
  color: #a0aec0;
  font-size: 12px;
  font-weight: 400;
  line-height: normal;
}

.values {
  display: flex;
  align-items: center;
  gap: 5px;
}

.values h6 {
  color: #fff;
  font-size: 18px;
  font-weight: 700;
  line-height: normal;
}

.positiveChange,
.negativeChange {
  font-size: 14px;
  font-weight: 700;
  line-height: normal;
}

.positiveChange {
  color: #01b574;
}

.negativeChange {
  color: #e31a1a;
}

.iconWrapper {
  padding: 11px;
  border-radius: 12px;
  background: #0075ff;
  box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02);
  flex-shrink: 0;
}

.iconWrapper svg {
  width: 22.5px;
  height: 22.5px;
  color: #fff;
}

@media screen and (max-width: 1300px) {
  .infoCardsWrapper {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media screen and (max-width: 991px) {
  .infoCardsWrapper {
    grid-template-columns: repeat(1, 1fr);
  }
}

